force-app/main/default/objects/Campaign_Document__c/Campaign_Document__c.object-meta.xml
<CustomObject>
    <label>Campaign Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>