force-app/main/default/objects/Campaign_Document__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign Record to which Document is linked.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Documents</relationshipLabel>
    <relationshipName>Campaign_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>