force-app/main/default/objects/Campaign_Document__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Additional comments on the Campaign</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>