force-app/main/default/objects/Campaign_Document__c/fields/Is_Private__c.field-meta.xml
<CustomField>
    <fullName>Is_Private__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>PrivateFlag</label>
    <type>Checkbox</type>
</CustomField>