force-app/main/default/objects/Campaign_Document__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>URL link to access campaign document</description>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>