force-app/main/default/objects/Campaign_Document__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Unique external Id of the record.</description>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>